src/patternfly/components/Table/table.scss
/* ... */
.pf-c-table__sort .pf-c-table__text {
  --pf-c-table--cell--MinWidth: 0;
}

// Sort content
// display grid for buttons is not supported
.pf-c-table__button-content,
.pf-c-table__column-help {
  display: grid;
  align-items: end;
  justify-content: start;
  grid-template-columns: auto max-content;

  .pf-c-table__text {
    min-width: auto;
  }

  // stylelint-disable
  .pf-c-table thead.pf-m-nowrap &,
  .pf-c-table tr.pf-m-nowrap &,
  .pf-c-table th.pf-m-nowrap & {
    grid-template-columns: min-content max-content;
  }

  .pf-c-table thead.pf-m-fit-content &,
  .pf-c-table tr.pf-m-fit-content &,
  .pf-c-table th.pf-m-fit-content & {
    grid-template-columns: fit-content max-content;
  }

  .pf-c-table thead.pf-m-wrap &,
  .pf-c-table tr.pf-m-wrap &,
  .pf-c-table th.pf-m-wrap &,
  .pf-c-table thead.pf-m-truncate &,
  .pf-c-table tr.pf-m-truncate &,
  .pf-c-table th.pf-m-truncate & {
    grid-template-columns: auto max-content;
  }
  // stylelint-enable
}

// Minimize padding
.pf-c-table .pf-c-table__toggle,
.pf-c-table .pf-c-table__action,
.pf-c-table .pf-c-table__inline-edit-action {
  --pf-c-table--cell--PaddingBottom: 0;
}

// stylelint-disable
// Minimize width
.pf-c-table .pf-c-table__check,
.pf-c-table .pf-c-table__toggle,
.pf-c-table .pf-c-table__action,
.pf-c-table .pf-c-table__favorite,
.pf-c-table th.pf-m-favorite,
.pf-c-table .pf-c-table__inline-edit-action,
.pf-c-table .pf-c-table__draggable {
  --pf-c-table--cell--MinWidth: 0;
  --pf-c-table--cell--Width: 1%;
}
// stylelint-enable

// Toggle table cell
.pf-c-table__toggle {
  --pf-c-table--cell--PaddingRight: 0;
  --pf-c-table--cell--PaddingLeft: 0;

  vertical-align: top;

  .pf-c-button {
    margin-top: var(--pf-c-table__toggle--c-button--MarginTop);
    margin-bottom: var(--pf-c-table__toggle--c-button--MarginBottom);

    &.pf-m-expanded {
      .pf-c-table__toggle-icon {
        transform: rotate(var(--pf-c-table__toggle--c-button--m-expanded__toggle-icon--Rotate));
      }
    }
  }

  .pf-c-table__toggle-icon {
    transition: var(--pf-c-table__toggle--c-button__toggle-icon--Transition);
    transform: rotate(var(--pf-c-table__toggle--c-button__toggle-icon--Rotate));
  }

  svg {
    pointer-events: none;
  }
}

// Check table cell
.pf-c-table__check {
  --pf-c-table--cell--FontSize: var(--pf-c-table__check--input--FontSize);

  label:not([disabled]),
  input:not([disabled]) {
    cursor: pointer;
  }

  label {
    display: block;
    padding: inherit;
    margin: calc(var(--pf-c-table--cell--PaddingTop) * -1) calc(var(--pf-c-table--cell--PaddingRight) * -1) calc(var(--pf-c-table--cell--PaddingBottom) * -1) calc(var(--pf-c-table--cell--PaddingLeft) * -1);
  }
}

// Favorite body cell
.pf-c-table__favorite {
  .pf-c-button {
    --pf-c-button--m-plain--Color: var(--pf-c-table__favorite--c-button--Color);
    --pf-c-button--FontSize: var(--pf-c-table__favorite--c-button--FontSize);

    margin: var(--pf-c-table__favorite--c-button--MarginTop) var(--pf-c-table__favorite--c-button--MarginRight) var(--pf-c-table__favorite--c-button--MarginBottom) var(--pf-c-table__favorite--c-button--MarginLeft);

    @at-root .pf-m-favorited#{&} {
      --pf-c-button--m-plain--Color: var(--pf-c-table__favorite--m-favorited--c-button--Color);
    }
  }
}

// Draggable
.pf-c-table__draggable {
  .pf-c-button {
    margin: var(--pf-c-table__draggable--c-button--MarginTop) var(--pf-c-table__draggable--c-button--MarginRight) var(--pf-c-table__draggable--c-button--MarginBottom) var(--pf-c-table__draggable--c-button--MarginLeft);
    cursor: grab;

    &:active {
      cursor: grabbing;
    }
  }
}

// Table action cell
.pf-c-table__action,
.pf-c-table__inline-edit-action {
  --pf-c-table--cell--PaddingTop: 0;
  --pf-c-table--cell--PaddingRight: var(--pf-c-table__action--PaddingRight);
  --pf-c-table--cell--PaddingBottom: 0;
  --pf-c-table--cell--PaddingLeft: var(--pf-c-table__action--PaddingLeft);

  padding-top: 0;
  padding-bottom: 0;
  vertical-align: middle;
}

// Inline edit
.pf-c-table__inline-edit-action {
  --pf-c-table--cell--PaddingLeft: 0;
  --pf-c-table--cell--PaddingRight: 0;

  text-align: right;
}
/* ... */

